crates/squawk_parser/tests/snapshots/tests__drop_cast_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_cast.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_CAST
    DROP_KW "drop"
    WHITESPACE " "
    CAST_KW "cast"
    WHITESPACE " "
    CAST_SIG
      L_PAREN "("
      PATH_TYPE
        PATH_REF
          PATH_SEGMENT_REF
            TEXT_KW "text"
      WHITESPACE " "
      AS_KW "as"
      WHITESPACE " "
      PATH_TYPE
        PATH_REF
          PATH_SEGMENT_REF
            INT_KW "int"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_CAST
    DROP_KW "drop"
    WHITESPACE " "
    CAST_KW "cast"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    CAST_SIG
      L_PAREN "("
      PATH_TYPE
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "a"
      WHITESPACE " "
      AS_KW "as"
      WHITESPACE " "
      PATH_TYPE
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "b"
      R_PAREN ")"
    WHITESPACE " "
    CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_CAST
    DROP_KW "drop"
    WHITESPACE " "
    CAST_KW "cast"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    CAST_SIG
      L_PAREN "("
      PATH_TYPE
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "a"
      WHITESPACE " "
      AS_KW "as"
      WHITESPACE " "
      PATH_TYPE
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "bar"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "b"
      R_PAREN ")"
    WHITESPACE " "
    RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
