crates/squawk_parser/tests/snapshots/tests__drop_database_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_database.sql
---
SOURCE_FILE
  COMMENT "-- drop_database"
  WHITESPACE "\n"
  DROP_DATABASE
    DROP_KW "drop"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_DATABASE
    DROP_KW "drop"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    DROP_DATABASE_FORCE_CLAUSE
      L_PAREN "("
      WHITESPACE " "
      FORCE
        FORCE_KW "force"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_DATABASE
    DROP_KW "drop"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    DROP_DATABASE_FORCE_CLAUSE
      WITH_KW "with"
      WHITESPACE " "
      L_PAREN "("
      WHITESPACE " "
      FORCE
        FORCE_KW "force"
      COMMA ","
      WHITESPACE " "
      FORCE
        FORCE_KW "force"
      WHITESPACE " "
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_DATABASE
    DROP_KW "drop"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "\"table_name\""
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_DATABASE
    DROP_KW "drop"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    DATABASE_REF
      IDENT "\"table_name\""
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_DATABASE
    DROP_KW "drop"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    DATABASE_REF
      IDENT "\"table_name\""
  WHITESPACE "\n\n"
