crates/squawk_parser/tests/snapshots/tests__drop_foreign_table_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_foreign_table.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_FOREIGN_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_FOREIGN_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    COMMA ","
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "b"
    COMMA ","
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_FOREIGN_TABLE
    DROP_KW "drop"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    COMMA ","
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "b"
    COMMA ","
    WHITESPACE " "
    TABLE_NAME_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
