crates/squawk_parser/tests/snapshots/tests__drop_index_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_index.sql
---
SOURCE_FILE
  COMMENT "-- drop_index"
  WHITESPACE "\n"
  DROP_INDEX
    DROP_KW "drop"
    WHITESPACE " "
    INDEX_KW "index"
    WHITESPACE " "
    INDEX_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "i"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_INDEX
    DROP_KW "drop"
    WHITESPACE " "
    INDEX_KW "index"
    WHITESPACE " "
    INDEX_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "i"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_INDEX
    DROP_KW "drop"
    WHITESPACE " "
    INDEX_KW "index"
    WHITESPACE " "
    CONCURRENTLY_KW "concurrently"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    INDEX_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    COMMA ","
    WHITESPACE " "
    INDEX_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "b"
    COMMA ","
    WHITESPACE " "
    INDEX_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "c"
    WHITESPACE " "
    CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_INDEX
    DROP_KW "drop"
    WHITESPACE " "
    INDEX_KW "index"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    INDEX_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "d"
    WHITESPACE " "
    RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_INDEX
    DROP_KW "drop"
    WHITESPACE " "
    INDEX_KW "index"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    INDEX_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "\"field_name_idx\""
    SEMICOLON ";"
  WHITESPACE "\n\n"
  DROP_INDEX
    DROP_KW "drop"
    WHITESPACE " "
    INDEX_KW "index"
    WHITESPACE " "
    CONCURRENTLY_KW "concurrently"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    INDEX_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "\"field_name_idx\""
    SEMICOLON ";"
  WHITESPACE "\n\n"
