crates/squawk_parser/tests/snapshots/tests__drop_language_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_language.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_LANGUAGE
    DROP_KW "drop"
    WHITESPACE " "
    LANGUAGE_KW "language"
    WHITESPACE " "
    LANGUAGE_REF
      IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_LANGUAGE
    DROP_KW "drop"
    WHITESPACE " "
    LANGUAGE_KW "language"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    LANGUAGE_REF
      IDENT "a"
    WHITESPACE " "
    CASCADE
      CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_LANGUAGE
    DROP_KW "drop"
    WHITESPACE " "
    PROCEDURAL_KW "procedural"
    WHITESPACE " "
    LANGUAGE_KW "language"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    LANGUAGE_REF
      IDENT "a"
    WHITESPACE " "
    RESTRICT
      RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
